--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -28,7 +28,11 @@
                 "desktop": "Desktop Mode",
                 "desktop-description": "This allows you to use WASD and the mouse to navigate around the menu in game. This makes testing much easier, because you don't have to put on your headset!",
                 "debug": "Debug Mode",
-                "debug-description": "Enables the output log window for IPA. This will show the debug console that mods use."
+                "debug-description": "Enables the output log window for IPA. This will show the debug console that mods use.",
+                "advanced-launch": {
+                    "button": "Advanced launch",
+                    "placeholder": "Additional arguments ex: --revert; --nowait"
+                }
             },
             "maps": {
                 "title": "Shared maps",
