--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -67,6 +67,7 @@
             "mods": {
                 "loading-mods": "Loading mods...",
                 "no-internet": "No internet",
+                "mods-not-available": "No mods are available yet for this version of Beat Saber",
                 "buttons": {
                     "more-infos": "More info",
                     "install-or-update": "Install or update"
