[feature] add german translation

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -144,7 +144,7 @@
                         "en-US": "English, USA",
                         "fr-FR": "French",
                         "es-ES": "Spanish",
-                        "de-DE": "German"
+                        "de-DE": "Deutsch"
                     }
                 }
             },
