--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -585,7 +585,8 @@
             "buttons": {
                 "add-folder": "Añadir Carpeta",
                 "link-folder": "Enlazar Carpeta",
-                "unlink-folder": "Desenlazar Carpeta"
+                "unlink-folder": "Desenlazar Carpeta",
+                "link-all": "Enlazar todo"
             }
         }
     },
