[feature-136] fix some bugs + prepare models download + use color libs for font contrast

--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -1,6 +1,7 @@
 {
     "misc": {
         "download": "Laden",
+        "add": "Hinzufügen",
         "verify": "Prüfen",
         "launch": "Starten",
         "mods": "Mods",
