--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -1,6 +1,7 @@
 {
     "misc": {
         "download": "Download",
+        "add": "Add",
         "verify": "Verify",
         "launch": "Launch",
         "mods": "Mods",
