--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -1,6 +1,7 @@
 {
     "misc": {
         "download": "Descargar",
+        "add": "Añadir",
         "verify": "Verificar",
         "launch": "Lanzar",
         "mods": "Mods",
