--- a/assets/jsons/translations/fr.json
+++ b/assets/jsons/translations/fr.json
@@ -1,6 +1,7 @@
 {
     "misc": {
         "download": "Télécharger",
+        "add": "Ajouter",
         "verify": "Vérifier",
         "launch": "Lancer",
         "mods": "Mods",
